Fix wrapping in Firefox (issues/3541)

--- a/src/kibana/styles/_table.less
+++ b/src/kibana/styles/_table.less
@@ -15,6 +15,7 @@ kbn-table, .kbn-table, tbody[kbn-rows] {
   dl.source {
     margin-bottom: 0;
     line-height: 2em;
+    word-break: break-all;
 
     dt {
       display: inline;
